--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -21,7 +22,7 @@ section{
 .link-button{
     text-decoration: none;
     color: white;
-    background-image:linear-gradient(orange,red,orange);
+    background-image:linear-gradient(orange,tomato,orange);
     padding: 10px 20px;
     font-weight: 700;
     border-radius: 5px;
@@ -30,4 +31,9 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
